objects/smlfcom__SML_Fieldset_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>smlfcom__Cohort__c</fullName>
        <description>Enter the fieldset name form Cohort Analysis View</description>
        <inlineHelpText>Enter the fieldset name form Cohort Analysis View</inlineHelpText>
        <label>Cohort</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Custom_Pipeline__c</fullName>
        <label>Custom Pipeline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Custom_Waterfall__c</fullName>
        <label>Custom Waterfall</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Default__c</fullName>
        <description>Enter the primary/default fieldset name</description>
        <inlineHelpText>Enter the primary/default fieldset name</inlineHelpText>
        <label>Default</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Forecast__c</fullName>
        <description>Enter the fieldset name form Forecast View</description>
        <inlineHelpText>Enter the fieldset name form Forecast View</inlineHelpText>
        <label>Forecast</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Insight__c</fullName>
        <description>Enter the fieldset name form Insight/Changes View</description>
        <inlineHelpText>Enter the fieldset name form Insight/Changes View</inlineHelpText>
        <label>Insight</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Show_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Test Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Trend_Line__c</fullName>
        <label>Trend_Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Waterfall_Stack__c</fullName>
        <label>Waterfall Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Waterfall__c</fullName>
        <description>Enter the fieldset name form Waterfall View</description>
        <inlineHelpText>Enter the fieldset name form Waterfall View</inlineHelpText>
        <label>Waterfall</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>SML Fieldset Configuration</label>
</CustomObject>